--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -13,3 +13,5 @@ jobs:
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
+    - name: Run main.py
+      run: python3 main.py
