--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
     - name: Run main.py
-      run: python3 main.py
+      run: ls
