--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -13,5 +13,7 @@ jobs:
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
+    - name: Install Requirements
+      run: pip3 install -r requirements.txt
     - name: Run main.py
-      run: ls
+      run: gunicorn main:app
