--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
     - name: Install Requirements
-      run: pip3 install -r requirements.txt
+      run: pwd
     - name: Run main.py
       run: gunicorn main:app
