--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout main
+      uses: actions/checkout@v2
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
     - name: Install Requirements
