--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
     - name: Install Requirements
-      run: cat main.py
+      run: pip3 install -r requirements.txt
     - name: Run main.py
       run: gunicorn main:app
