--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -15,7 +15,9 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
+    - name: Install pylint
+      run: pip install pylint
     - name: Install Requirements
       run: pip3 install -r requirements.txt
-    - name: Run main.py
-      run: gunicorn main:app
+    - name: Test main.py
+      run: pylint main:app
