--- a/.github/workflows/python-code.yml
+++ b/.github/workflows/python-code.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Install Requirements
       run: pip3 install -r requirements.txt
     - name: Test main.py
-      run: pylint main:app
+      run: pylint main.py
