--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
         USERNAME: ${{ secrets.USER }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        script: sudo rm -r /docker/ozeliurs.com/* && sudo cp -r /tmp/ozeliurs.com/www/* /docker/ozeliurs.com/ && sudo rm -r /tmp/ozeliurs.com
+        script: sudo rm -r /var/www/@/* && sudo cp -r /tmp/ozeliurs.com/www/* /var/www/@/ && sudo rm -r /tmp/ozeliurs.com
