--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
         USERNAME: ${{ secrets.USER }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        script:  rm -rf /root/docker-compose/www-ozeliurs/www/* && cp -r /tmp/ozeliurs.com/www/* /root/docker-compose/www-ozeliurs/www && rm -r /tmp/ozeliurs.com
+        script: sudo rm -rf /root/docker-compose/www-ozeliurs/www/* && sudo cp -r /tmp/ozeliurs.com/www/* /root/docker-compose/www-ozeliurs/www && sudo rm -r /tmp/ozeliurs.com
